<resources>
    <string name="app_name">Temperature Conversion</string>
    <string name="app_title">Wesley Gavitt - Temperature Conversion</string>
    <string name="image_description">Temperature Image</string>
    <string name="enter_temperature">Enter Temperature</string>
    <string name="temperature_hint">Temperature</string>
    <string name="fahrenheit_to_celsius">Fahrenheit to Celsius</string>
    <string name="celsius_to_fahrenheit">Celsius to Fahrenheit</string>
    <string name="convert">Convert</string>
    <string name="converted_temperature">Converted Temperature</string>
    <string name="result_placeholder">Result will appear here</string>
    <string name="invalid_fahrenheit">Fahrenheit value must be between -100 and 250.</string>
    <string name="invalid_celsius">Celsius value must be between -75 and 125.</string>
    <string name="invalid_number">Please enter a valid temperature.</string>
</resources>